--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -142,6 +142,13 @@ button:focus,
 
 }
 
+.project-screenshot {
+  width: 300px; /* Set the width of the image */
+  height: 200px; /* Set the height of the image */
+  object-fit: cover; /* Maintain aspect ratio and crop if necessary */
+}
+
+
 .page-footer {
     clear: both;
     display: -webkit-box;
