--- a/css/styles.css
+++ b/css/styles.css
@@ -1,224 +1,469 @@
-/*
-Colors used
-
-Primary Color (Light Grey): #cddce1;
-Secondary Color (Light Blue Grey): #6f9da8;
-Link Active (Shady Seafoam): #357b70;
-Link, Visited (Dark Grey: #394d59;
-*/
-
-:root {
-  --light-grey: #cddce1;
-  --light-bluegrey: #6f9da8;
-  --shady-seafoam: #357b70;
-  --dark-grey: #394d59;
-}
-
+/* Global Styles */
 body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.6;
-
-    background-color: var(--light-grey);
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #0B0C10;
+  color: #C5C6C7;
 }
 
-h1 {
-    font-size: 30px;
-    font-weight: 700;
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-h2 {
-    font-size: 24px;
-    font-weight: 400;
+.welcome {
+  margin-bottom: 2%;
+  text-align: center;
 }
 
 a {
-    color: var(--shady-seafoam);
+  color: #66FCF1;
+  text-decoration: none;
 }
 
-a:visited {
-    /* visited link */
-    color: var(--dark-grey);
+a:hover {
+  text-decoration: underline;
 }
 
-a:hover,
-a:focus {
-    /* No underlining when hovering over a link */
-
-    text-decoration: none;
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #1F2833;
 }
 
-a:active {
-    /* selected link */
-    color: #489c79;
+.navbar-brand img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
-button,
-.button {
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: var(--light-bluegrey);
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    transition: opacity 0.2s;
+.navbar-links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-button:hover,
-button:focus,
-.button:hover,
-.button:focus {
-    cursor: pointer;
-    opacity: 0.8;
+.navbar-links a {
+  margin-left: 20px;
 }
 
-.button__secondary {
-    background-color: #548b9d;
-    color: #000;
+/* Hamburger Menu Styles */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
 }
 
-.navigation-list__item--active {
-    text-decoration: none;
+.hamburger div {
+  width: 25px;
+  height: 3px;
+  background-color: #66FCF1;
+  margin: 3px 0;
+  transition: all 0.3s ease;
 }
 
-.profile__portrait {
-    float: left;
-    width: 250px;
-    margin-right: 40px;
-    border-radius: 50%;
-
+/*This is the Navbar menu*/
+.menu-links {
+  display: none;
+  background: #C5C6C7;
+  flex-direction: column;
+  margin-left: auto;
+  position: relative;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 5px;
+  /* Define animation for sliding */
+  animation: slideIn 0.3s forwards ease-in-out;
 }
 
-.page-footer {
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.menu-links a {
+  text-decoration: none;
+  color: #404040;
+}
+
+/* Delay text rendering until animation starts */
+.item {
+  height: 3vh;
+  margin-top: 2vh;
+  border-bottom: 2px solid #A0A0A0;
+  padding-bottom: 1.25vh;
+  animation: fadeIn 0.3s forwards ease-in-out;
+}
+
+/* Ensure last item has no border */
+.item:last-child {
+  border-bottom: none;
+}
+
+/* Keyframes for sliding animation */
+@keyframes slideIn {
+  from {
+    height: 0;
+  }
+  to {
+    height: 20vh; /* Change to desired final height */
+  }
+}
+
+
+/* Keyframes for sliding out animation */
+@keyframes slideOut {
+  from {
+    height: 20vh; /* Change to desired initial height */
+  }
+  to {
+    height: 0;
+  }
+}
+
+
+/* Keyframes for fading in animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1; /* Fade in the text when animation starts */
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0; /* Fade in the text when animation starts */
+  }
+}
+
+.menu-links.active {
+  animation: slideOut 0.3s forwards ease-in-out, ;
+}
+
+.menu-links.armed {
+  animation: fadeOut 0.2s forwards ease;
+}
+
+/* Main Content Styles */
+.content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  grid-gap: 20px;
+}
+
+.project {
+  border-radius: 5px;
+  background-color: #1F2833;
+  padding: 20px;
+  display: flex;
+  border: 2px solid #45A29E;
+  flex-direction: column; /* Change flex direction to column */
+}
+
+.project:last-child {
+  grid-column: 1 / -1;
+}
+
+.project:last-child img{
+  height: 300px;
+  width: 30%;
+  border-radius: 5px;
+  display: block;
+  margin: 0 auto;
+  min-width: 300px;
+}
+
+.project .image-container {
+  display: flex;
+  justify-content: center;
+}
+
+.project .image-container a {
+  margin: 0 10px;
+}
+
+.project h2 {
+  color: #66FCF1;
+  margin: 0;
+  height: 46px;
+}
+
+.project-description {
+  margin-bottom: 10px;
+}
+
+.project-description img {
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
+}
+
+.project-description p {
+  margin-bottom: 20px; /* Remove margin from the paragraph */
+}
+
+
+.card-footer {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Align items to center horizontally */
+  background-color: #1F2833;
+  color: #C5C6C7;
+}
+
+.project-buttons {
+  display: flex;
+  justify-content: center; /* Center buttons horizontally */
+  gap: 10px; /* Add some gap between buttons */
+  margin-top: 15px;
+}
+
+.project-buttons a {
+  display: inline-block;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #66FCF1;
+  color: #66FCF1;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.project-buttons a:hover {
+  background-color: #66FCF1;
+  color: #0B0C10;
 }
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
+  margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-* {
-    box-sizing: border-box;
+.profile__portrait {
+  float: left;
+  width: 32%;
+  margin-right: 40px;
+  border-radius: 50%;
 }
 
-.page-header {
+.profile-info {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #66FCF1;
+  padding: 2%;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.check-link {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 60%;
+}
+
+#about img {
+  border-radius: 5%;
+
+}
+
+.about-pic {
+  width: 400px;
+  max-width: 60%;
+  height: auto;
+  margin: 0 auto;
+}
+
+#contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+
+.contact-form {
+  margin: 0 auto;
+  margin-top: 10%;
+  padding: 20px;
+  border: 2px solid #66FCF1;
+  border-radius: 5px;
+  max-width: 40%;
+}
+
+.input-fields {
+  margin: 0 auto;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 5px;
+  color: #66FCF1;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  border: 1px solid #66FCF1;
+  border-radius: 3px;
+
+}
+
+.contact-form textarea {
+  resize: vertical;
+  height: 150px;
+}
+
+.contact-form input[type="submit"] {
+  background-color: #66FCF1;
+  color: #0B0C10;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+#contact-logo {
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
+.contact-form input[type="submit"]:hover {
+  background-color: #45a29e;
+}
+
+#name, #email, #subject, #message {
+  margin-bottom: 5%;
+}
+
+#submit-btn {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 0;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #66FCF1;
+  background-color: #66FCF1;
+  color: #0B0C10;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#submit-btn:hover {
+  background-color: #0B0C10;
+  color: #66FCF1;
+}
+
+.submit-button-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+@media screen and (max-width: 768px) {
+  .navbar-links {
+    display: none;
+  }
+
+  .hamburger {
     display: flex;
-    width: 100%;
-    padding: 20px;
-}
+  }
 
-.page-header__item {
-    flex: 0 1 200px;
-}
+  .profile-info {
+    font-size: .85rem;
+  }
 
-.page-header__item:last-child {
-    flex-grow: 1;
-    text-align: right;
-}
-
-.navigation-list {
-    list-style-type: none;
-}
-
-.navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-}
-
-.grid__item {
-    background-color: lightgray;
-    padding: 10px;
-}
-
-.bio {
-    margin: 0 auto;
-    padding-left: 0;
+  .profile {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
-    max-width: 700px;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .profile__portrait {
+    margin-right: 0; /* Remove the margin */
+    margin-top: 10%;
+    margin-bottom: 10%; /* Add margin bottom if needed */
+  }
+
+  
+  #about-container{
+    min-height: 100vh;
+    position: relative;
+  }
+
+  .check-link {
+    position: absolute; /* Position the element absolutely */
+    bottom: 0; /* Align the element to the bottom */
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%);
+    padding-bottom: 5%;
+  }
+  
 }
 
-.bio-list {
-    list-style-type: none;
-    display: inline;
+@media screen and (max-width: 640px) {
+  .profile-info {
+    font-size: .75rem;
+  }
+
+  #contact {
+    flex-direction: column;
+    align-items: center;  
+  }
+
+  .contact-form {
+    max-width: 80%;
+  }
+
 }
 
-#logo {
-    width: 200px;
+@media screen and (max-width: 560px) {
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .profile__portrait {
+    margin-right: 0; /* Remove the margin */
+    margin-top: 10%;
+    margin-bottom: 10%; /* Add margin bottom if needed */
+  }
+
+  #contact {
+    flex-direction: column;
+    align-items: center;  
+  }
+
+  .contact-form {
+    max-width: 80%;
+  }
+
 }
-
-@media all and (max-width: 500px) {
-    .grid {
-      grid-template-columns: 1fr;
-    }
-  }
-  @media all and (min-width: 500px) and (max-width: 750px){
-    .grid {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-    .grid__item:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
-  }
-
-@keyframes color-change {
-    from {
-      fill: #edc655;
-    }
-    to {
-      fill: #f76414;
-    }
-  }
-
-  .sun {
-    animation: 4s color-change infinite alternate linear;
-  }
-
-  @keyframes cloud-move {
-    from {
-      transform: translate(0, 50px);
-    }
-    to {
-      transform: translate(200px, 50px);
-    }
-  }
-
-  .cloud-front {
-    animation: 30s cloud-move infinite alternate linear;
-  }
-
-  @keyframes cloud-move-reverse {
-    from {
-      transform: translate(446px, 48px);
-    }
-    to {
-      transform: translate(100px, 48px);
-    }
-  }
-
-  .cloud-back {
-    animation: 34s cloud-move-reverse infinite alternate linear;
-  }
