--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,9 @@ a:hover {
   justify-content: space-around;
   margin-top: 10%;
   margin-bottom: 5%;
+  border: 2px solid #66FCF1;
+  padding: 2%;
+  border-radius: 5px;
 }
 
 .contact-form {
