--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 /* Global Styles */
 body {
   font-family: Arial, sans-serif;
@@ -36,15 +29,9 @@ a:hover {
 
 /* Navbar Styles */
 .navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px 20px;
   background-color: #1F2833;
 }
@@ -56,15 +43,9 @@ a:hover {
 }
 
 .navbar-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .navbar-links a {
@@ -74,10 +55,7 @@ a:hover {
 /* Hamburger Menu Styles */
 .hamburger {
   display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   cursor: pointer;
 }
 
@@ -86,8 +64,6 @@ a:hover {
   height: 3px;
   background-color: #66FCF1;
   margin: 3px 0;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
@@ -95,24 +71,16 @@ a:hover {
 .menu-links {
   display: none;
   background: #C5C6C7;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-left: auto;
   position: relative;
   text-align: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   /* Define animation for sliding */
-  -webkit-animation: slideIn 0.3s forwards ease-in-out;
-          animation: slideIn 0.3s forwards ease-in-out;
+  animation: slideIn 0.3s forwards ease-in-out;
 }
 
 .menu-links a {
@@ -126,8 +94,7 @@ a:hover {
   margin-top: 2vh;
   border-bottom: 2px solid #A0A0A0;
   padding-bottom: 1.25vh;
-  -webkit-animation: fadeIn 0.3s forwards ease-in-out;
-          animation: fadeIn 0.3s forwards ease-in-out;
+  animation: fadeIn 0.3s forwards ease-in-out;
 }
 
 /* Ensure last item has no border */
@@ -136,14 +103,6 @@ a:hover {
 }
 
 /* Keyframes for sliding animation */
-@-webkit-keyframes slideIn {
-  from {
-    height: 0;
-  }
-  to {
-    height: 25vh; /* Change to desired final height */
-  }
-}
 @keyframes slideIn {
   from {
     height: 0;
@@ -155,17 +114,9 @@ a:hover {
 
 
 /* Keyframes for sliding out animation */
-@-webkit-keyframes slideOut {
-  from {
-    height: 20vh; /* Change to desired initial height */
-  }
-  to {
-    height: 0;
-  }
-}
 @keyframes slideOut {
   from {
-    height: 20vh; /* Change to desired initial height */
+    height: 25vh; /* Change to desired initial height */
   }
   to {
     height: 0;
@@ -174,29 +125,12 @@ a:hover {
 
 
 /* Keyframes for fading in animation */
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1; /* Fade in the text when animation starts */
-  }
-}
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
   to {
     opacity: 1; /* Fade in the text when animation starts */
-  }
-}
-
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0; /* Fade in the text when animation starts */
   }
 }
 
@@ -210,18 +144,15 @@ a:hover {
 }
 
 .menu-links.active {
-  -webkit-animation: slideOut 0.3s forwards ease-in-out, ;
-          animation: slideOut 0.3s forwards ease-in-out, ;
+  animation: slideOut 0.3s forwards ease-in-out, ;
 }
 
 .menu-links.armed {
-  -webkit-animation: fadeOut 0.2s forwards ease;
-          animation: fadeOut 0.2s forwards ease;
+  animation: fadeOut 0.2s forwards ease;
 }
 
 /* Main Content Styles */
 .content {
-  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
   grid-gap: 20px;
@@ -231,14 +162,9 @@ a:hover {
   border-radius: 5px;
   background-color: #1F2833;
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border: 2px solid #45A29E;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; /* Change flex direction to column */
+  flex-direction: column; /* Change flex direction to column */
 }
 
 .project:last-child {
@@ -255,12 +181,8 @@ a:hover {
 }
 
 .project .image-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .project .image-container a {
@@ -290,27 +212,16 @@ a:hover {
 
 .card-footer {
   margin-top: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; /* Align items to center horizontally */
+  flex-direction: column;
+  align-items: center; /* Align items to center horizontally */
   background-color: #1F2833;
   color: #C5C6C7;
 }
 
 .project-buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; /* Center buttons horizontally */
+  justify-content: center; /* Center buttons horizontally */
   gap: 10px; /* Add some gap between buttons */
   margin-top: 15px;
 }
@@ -322,8 +233,6 @@ a:hover {
   border: 1px solid #66FCF1;
   color: #66FCF1;
   border-radius: 5px;
-  -webkit-transition: background-color 0.3s, color 0.3s;
-  -o-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -334,15 +243,9 @@ a:hover {
 
 .profile {
   margin-top: 5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile__portrait {
@@ -353,13 +256,8 @@ a:hover {
 }
 
 .profile-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   border: 2px solid #66FCF1;
   padding: 2%;
   border-top-right-radius: 20px;
@@ -369,25 +267,14 @@ a:hover {
 .check-link {
   margin-top: 10%;
   margin-bottom: 5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 #about {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin: 0 auto;
   text-align: center;
   max-width: 60%;
@@ -395,7 +282,6 @@ a:hover {
 
 #about img {
   border-radius: 5%;
-
 }
 
 .about-pic {
@@ -406,17 +292,14 @@ a:hover {
 }
 
 #contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-top: 10%;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 5%;
   margin-bottom: 5%;
+  border: 2px solid #66FCF1;
+  padding: 2%;
+  border-radius: 5px;
 }
 
 .contact-form {
@@ -431,13 +314,8 @@ a:hover {
 .input-fields {
   margin: 0 auto;
   padding: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .contact-form label {
@@ -472,12 +350,8 @@ a:hover {
 
 #contact-logo {
   border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 10%;
 }
 
@@ -490,12 +364,8 @@ a:hover {
 }
 
 #submit-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   margin-top: 0;
   padding: 8px 16px;
   text-decoration: none;
@@ -503,8 +373,6 @@ a:hover {
   background-color: #66FCF1;
   color: #0B0C10;
   border-radius: 5px;
-  -webkit-transition: background-color 0.3s, color 0.3s;
-  -o-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -514,12 +382,44 @@ a:hover {
 }
 
 .submit-button-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+#case-container img {
+  border-radius: 5px;
+  height: 300px;
+  margin: 0 auto;
+  min-width: 300px;
+}
+
+#python {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin: 20px;
+}
+
+#python a {
+  display: block;
+}
+
+#python img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+@media (max-width: 1200px) {
+  #python {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  #python {
+    grid-template-columns: 1fr;
+  }
 }
 
 
@@ -529,25 +429,14 @@ a:hover {
   }
 
   .hamburger {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
 
   .profile {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
   }
 
@@ -571,13 +460,8 @@ a:hover {
 
 @media screen and (max-width: 640px) {
   #contact {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;  
+    flex-direction: column;
+    align-items: center;  
   }
 
   .contact-form {
@@ -588,19 +472,10 @@ a:hover {
 
 @media screen and (max-width: 560px) {
   .profile {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
   }
 
@@ -611,13 +486,8 @@ a:hover {
   }
 
   #contact {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;  
+    flex-direction: column;
+    align-items: center;  
   }
 
   .contact-form {
