--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* Global Styles */
 body {
   font-family: Arial, sans-serif;
@@ -29,9 +36,15 @@ a:hover {
 
 /* Navbar Styles */
 .navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 10px 20px;
   background-color: #1F2833;
 }
@@ -43,9 +56,15 @@ a:hover {
 }
 
 .navbar-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navbar-links a {
@@ -55,7 +74,10 @@ a:hover {
 /* Hamburger Menu Styles */
 .hamburger {
   display: none;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   cursor: pointer;
 }
 
@@ -64,6 +86,8 @@ a:hover {
   height: 3px;
   background-color: #66FCF1;
   margin: 3px 0;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
@@ -71,16 +95,24 @@ a:hover {
 .menu-links {
   display: none;
   background: #C5C6C7;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-left: auto;
   position: relative;
   text-align: center;
-  justify-content: space-evenly;
-  align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   /* Define animation for sliding */
-  animation: slideIn 0.3s forwards ease-in-out;
+  -webkit-animation: slideIn 0.3s forwards ease-in-out;
+          animation: slideIn 0.3s forwards ease-in-out;
 }
 
 .menu-links a {
@@ -94,7 +126,8 @@ a:hover {
   margin-top: 2vh;
   border-bottom: 2px solid #A0A0A0;
   padding-bottom: 1.25vh;
-  animation: fadeIn 0.3s forwards ease-in-out;
+  -webkit-animation: fadeIn 0.3s forwards ease-in-out;
+          animation: fadeIn 0.3s forwards ease-in-out;
 }
 
 /* Ensure last item has no border */
@@ -103,6 +136,14 @@ a:hover {
 }
 
 /* Keyframes for sliding animation */
+@-webkit-keyframes slideIn {
+  from {
+    height: 0;
+  }
+  to {
+    height: 25vh; /* Change to desired final height */
+  }
+}
 @keyframes slideIn {
   from {
     height: 0;
@@ -114,6 +155,14 @@ a:hover {
 
 
 /* Keyframes for sliding out animation */
+@-webkit-keyframes slideOut {
+  from {
+    height: 25vh; /* Change to desired initial height */
+  }
+  to {
+    height: 0;
+  }
+}
 @keyframes slideOut {
   from {
     height: 25vh; /* Change to desired initial height */
@@ -125,12 +174,29 @@ a:hover {
 
 
 /* Keyframes for fading in animation */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1; /* Fade in the text when animation starts */
+  }
+}
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
   to {
     opacity: 1; /* Fade in the text when animation starts */
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0; /* Fade in the text when animation starts */
   }
 }
 
@@ -144,15 +210,18 @@ a:hover {
 }
 
 .menu-links.active {
-  animation: slideOut 0.3s forwards ease-in-out, ;
+  -webkit-animation: slideOut 0.3s forwards ease-in-out, ;
+          animation: slideOut 0.3s forwards ease-in-out, ;
 }
 
 .menu-links.armed {
-  animation: fadeOut 0.2s forwards ease;
+  -webkit-animation: fadeOut 0.2s forwards ease;
+          animation: fadeOut 0.2s forwards ease;
 }
 
 /* Main Content Styles */
 .content {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
   grid-gap: 20px;
@@ -162,9 +231,14 @@ a:hover {
   border-radius: 5px;
   background-color: #1F2833;
   padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border: 2px solid #45A29E;
-  flex-direction: column; /* Change flex direction to column */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; /* Change flex direction to column */
 }
 
 .project:last-child {
@@ -181,8 +255,12 @@ a:hover {
 }
 
 .project .image-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .project .image-container a {
@@ -212,16 +290,27 @@ a:hover {
 
 .card-footer {
   margin-top: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center; /* Align items to center horizontally */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; /* Align items to center horizontally */
   background-color: #1F2833;
   color: #C5C6C7;
 }
 
 .project-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center; /* Center buttons horizontally */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; /* Center buttons horizontally */
   gap: 10px; /* Add some gap between buttons */
   margin-top: 15px;
 }
@@ -233,6 +322,8 @@ a:hover {
   border: 1px solid #66FCF1;
   color: #66FCF1;
   border-radius: 5px;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  -o-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -243,9 +334,15 @@ a:hover {
 
 .profile {
   margin-top: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .profile__portrait {
@@ -256,25 +353,45 @@ a:hover {
 }
 
 .profile-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border: 2px solid #66FCF1;
   padding: 2%;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
 }
 
+.profile-info p {
+  font-size: 1.2rem;
+}
+
 .check-link {
   margin-top: 10%;
   margin-bottom: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #about {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0 auto;
   text-align: center;
   max-width: 60%;
@@ -291,15 +408,29 @@ a:hover {
   margin: 0 auto;
 }
 
+#about-container {
+  font-size: 1.2rem;
+}
+
 #contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin-top: 5%;
   margin-bottom: 5%;
   border: 2px solid #66FCF1;
   padding: 2%;
   border-radius: 5px;
+}
+
+#contact-p p {
+  font-size: 1.2rem;
 }
 
 .contact-form {
@@ -314,8 +445,13 @@ a:hover {
 .input-fields {
   margin: 0 auto;
   padding: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .contact-form label {
@@ -350,8 +486,12 @@ a:hover {
 
 #contact-logo {
   border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 10%;
 }
 
@@ -364,8 +504,12 @@ a:hover {
 }
 
 #submit-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   margin-top: 0;
   padding: 8px 16px;
   text-decoration: none;
@@ -373,6 +517,8 @@ a:hover {
   background-color: #66FCF1;
   color: #0B0C10;
   border-radius: 5px;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  -o-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -382,8 +528,12 @@ a:hover {
 }
 
 .submit-button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 #case-container img {
@@ -398,7 +548,9 @@ a:hover {
 }
 
 #python {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 10px 1fr 10px 1fr;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   margin: 20px;
@@ -416,12 +568,14 @@ a:hover {
 
 @media (max-width: 1200px) {
   #python {
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 800px) {
   #python {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
@@ -433,14 +587,25 @@ a:hover {
   }
 
   .hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
   .profile {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 0 auto;
   }
 
@@ -464,8 +629,13 @@ a:hover {
 
 @media screen and (max-width: 640px) {
   #contact {
-    flex-direction: column;
-    align-items: center;  
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;  
   }
 
   .contact-form {
@@ -476,10 +646,19 @@ a:hover {
 
 @media screen and (max-width: 560px) {
   .profile {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 0 auto;
   }
 
@@ -490,8 +669,13 @@ a:hover {
   }
 
   #contact {
-    flex-direction: column;
-    align-items: center;  
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;  
   }
 
   .contact-form {
