--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -566,6 +566,28 @@ a:hover {
   display: block;
 }
 
+.chapter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.chapter img {
+  max-width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
 @media (max-width: 1200px) {
   #python {
     -ms-grid-columns: (1fr)[2];
